fix: Android - resolve issue with inline attachment downloads feat: Android - implement duplicate attachment naming logic
Fixes app crash when downloading large inline attachments (e.g., images) caused by handling large base64 strings.

Adds logic to rename duplicate attachments by appending an index (e.g., filename (1).ext) to avoid conflicts.